--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -40,5 +40,6 @@
     {{ content_for_layout }}
   </main>
   {{ 'bootstrap.min.js' | asset_url | script_tag }}
+  {{ 'application.js' | asset_url | script_tag }}
 </body>
 </html>
