--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,21 +1,34 @@
-<section class="container py-5">
-    <div class="row">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <!-- <h1>Example</h1> -->
-        <h1>{{ section.settings.title }}</h1>
-        <!-- <p>This is an example description</p> -->
-        {{ section.settings.description }}
-        <!-- <a href="#" class="btn btn-secondary">Shop Now</a> -->
-        <a href="{{ section.settings.button_link }}" class="btn btn-secondary">{{ section.settings.button_label }}</a>
-      </div>
+<section class="inner-hero-section">
+    {% if section.settings.image != blank %}
+        <img src="{{ section.settings.image | img_url }}" alt="">
+    {% else %}
+        {% capture current %}{% cycle 1,2 %}{% endcapture %}
+        {{ 'lifestyle-' | append: current | placeholder_svg_tag: 'placeholder-svg' }}
+    {% endif %}
+    <div class="container py-5">
+        <div class="row">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <!-- <h1>Example</h1> -->
+            <h1>{{ section.settings.title }}</h1>
+            <!-- <p>This is an example description</p> -->
+            {{ section.settings.description }}
+            <!-- <a href="#" class="btn btn-secondary">Shop Now</a> -->
+            <a href="{{ section.settings.button_link }}" class="btn btn-secondary">{{ section.settings.button_label }}</a>
+          </div>
+        </div>
     </div>
-  </section>
+</section>
 
 {% schema %}
 {
     "name": "Hero",
     "class": "hero-section",
     "settings": [
+        {
+            "type": "image_picker",
+            "id": "image",
+            "label": "Heading Background Title"
+        },
         {
             "type": "text",
             "id": "title",
