--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,44 +1,1 @@
-{% assign current_product = product.selected_or_first_available_variant %}
-{% assign product_image = current_product.featured_image | default: product.featured_image %}
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 col-12">
-      <img src="{{ product_image | img_url: 'large' }}" alt="{{ product_image.alt }}" class="img-fluid" id="ProductMainImage">
-      {% for image in product.images %}
-        <img src="{{ image.src | img_url: 'medium' }}" alt="{{ image.alt }}">
-      {% endfor %}
-    </div>
-    <div class="col-md-6 col-12">
-      <h1>{{ product.title }}</h1>
-      <p>{{ current_product.price | money_with_currency }}</p>
-
-      {% form 'product', product, class:"product-form", id:"AddToCartForm" %}
-        <div class="mb-3">
-          <select name="id" id="productSelect" class="form-select">
-            {% for variant in product.variants %}
-              {% if variant.available %}
-                <option value="{{ variant.id }}">
-                  {{ variant.title }}
-                </option>
-              {% else %}
-                 <option value="{{ variant.id }}" disabled="disabled">
-                   {{ variant.title }}
-                 </option>
-              {% endif %}
-            {% endfor %}
-          </select>
-        </div>
-        <div class="mb-3">
-          <input type="number" class="form-control" name="quantity" id="Quantity" value="1" min="1">
-        </div>
-        <button class="btn btn-primary btn-lg w-100 rounded-0" type="submit name="add" id="AddToCart">
-          Add to cart
-        </button>
-
-        {{ form | payment_button }}
-      {% endform %}
-
-    </div>
-  </div>
-</div>
+{% section 'product-template' %}
