--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,46 +1,72 @@
 {% if cart.item_count > 0 %}
-  <h1>cart</h1>
-  <form action="/cart" method="post" novalidate>
-    <table>
-      <thead>
-        <th colspan="2">Prod</th>
-        <th>Price</th>
-        <th>Qty</th>
-        <th>total</th>
-      </thead>
-      <tbody>
-        {% for item in cart.items %}
-          <tr>
-            <td>
-              <a href="{{ item.url | within: collections.all }}">
-                <img src="{{ item | img_url: 'medium' }}" alt="{{ item.title | escape }}">
-              </a>
-            </td>
-            <td>
-              <a href="{{ item.url }}">{{ item.product.title }}</a>
-              {{ item.variant.title }}
-              <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0">remove</a>
-            </td>
-            <td>{{ item.price | money }}</td>
-            <td>
-              <input type="number" name="updates[]" id="updates_{{ item.key }}" value="{{ item.quantity }}" min="0">
-            </td>
-            <td>
-              {% if item.original_line_price != item.line_price %}{{ item.original_line_price | money }}{% endif %}
-              {{ item.line_price | money }}
-              {% for discount in item.discounts %}{{ discount.title }}{% endfor %}
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <div>
-      <p>sub total : {{ cart.total_price | money }}</p>
-      <button type="submit" name="update">Update</button>
-      <button type="submit" name="checkout">Checkout</button>
-    </div>
-  </form>
+<div class="container">
+  <div class="my-5">
+    <h1 class="text-center mb-3">Items in your basket</h1>
+    <form action="/cart" method="POST" class="row" novalidate>
+      <div class="col-12 col-md-8">
+        <div class="card shadow">
+          <div class="card-body">
+            <table class="table table-border">
+              <thead>
+                <th>Product image</th>
+                <th>Product description</th>
+                <th>Price</th>
+                <th>Qty</th>
+                <th>total</th>
+              </thead>
+              <tbody>
+                {% for item in cart.items %}
+                  <tr>
+                    <td>
+                      <a href="{{ item.url | within: collections.all }}">
+                        <img src="{{ item | img_url: 'small' }}" alt="{{ item.title | escape }}">
+                      </a>
+                    </td>
+                    <td>
+                      <span class="small text-secondary">{{ item.variant.title }}</span><br>
+                      <span>
+                        <a href="{{ item.url }}">{{ item.product.title }}</a>
+                      </span>
+                      <br><span>
+                        <a class="badge bg-danger" href="/cart/change?line={{ forloop.index }}&amp;quantity=0">remove</a>
+                      </span>
+                    </td>
+                    <td>{{ item.price | money }}</td>
+                    <td style="max-width:100px">
+                      <input class="form-control" style="max-width:90px" type="number" name="updates[]" id="updates_{{ item.key }}" value="{{ item.quantity }}" min="0">
+                    </td>
+                    <td>
+                      {% if item.original_line_price != item.line_price %}{{ item.original_line_price | money }}{% endif %}
+                      {{ item.line_price | money }}
+                      {% for discount in item.discounts %}{{ discount.title }}{% endfor %}
+                    </td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card shadow">
+          <div class="card-body">
+            <p class="h3">The total amount is</p>
+            <p>{{ cart.total_price | money }}</p>
+            <div class="d-grid gap-2">
+              <button type="submit" class="btn btn-primary" name="update">Update</button>
+              <button type="submit" class="btn btn-primary" name="checkout">Checkout</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 {% else %}
-  <h2>cart</h2>
-  Cart is empty
+  <div class="container">
+    <div class="row">
+      <h2 class="text-center">Cart</h2>
+      <p>Cart is empty</p>
+    </div>
+  </div>
 {% endif %}
