--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -7,7 +7,7 @@
 
 <div class="container my-5 p-2">
   {% paginate blog.articles by 5 %}
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 py-5">
       {% for article in blog.articles %}
         <div class="col">
           <div class="card shadow">
@@ -32,9 +32,7 @@
       {% endfor %}
     </div>
 
-    {% if paginate.pages > 1 %}
-      {{ paginate | default_pagination }}
-    {% endif %}
+    {% render 'pagination', paginate: paginate %}
 
   {% endpaginate %}
 </div>
