--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -57,34 +57,39 @@
                   {% endif %}
                 </div>
               {% endfor %}
-  
+
               <div class="my-5 p-2 bg-light">
-  
+
                 <h2 class="h3 my-4">Comment your thought below</h2>
                 <div class="form-floating my-3">
                   <input class="form-control" type="text" name="comment[author]" id="CommentAuthor" placeholder="name" value="{{ form.author }}" autocapitalize="words">
                   <label for="CommentAuthor">name</label>
                 </div>
-  
+
                 <div class="form-floating my-3">
                   <input class="form-control" type="email" name="comment[email]" id="CommentEmail" placeholder="email" value="{{ form.email }}" autocorrect="off" autocapitalize="off">
                   <label for="CommentEmail">email</label>
                 </div>
-  
+
                 <div class="form-floating my-3">
                   <textarea class="form-control" name="comment[body]" id="CommentBody" placeholder="message" style="height: 120px;">{{ form.body }}</textarea>
                   <label for="CommentBody">message</label>
                 </div>
-  
+
                 <input class="btn btn-primary" type="submit" value="post">
-  
+
               </div>
-  
+
             {% endform %}
           </div>
         {% endif %}
       </div>
     </div>
-    <div class="col-12 col-md-4"></div>
+    {% comment %}
+      THIS COLUMN IS FOR SIDEBAR
+    {% endcomment %}
+    <div class="col-12 col-md-4">
+      {% section 'sidebar' %}
+    </div>
   </div>
 </div>
