--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -1,22 +1,89 @@
 {% paginate search.results by 10 %}
-  <form action="/search" method="get" role="search">
-    <input type="search" name="q" value="{{ search.terms | escape }}">
-    <button type="submit">search</button>
-  </form>
 
-  {% if search.performed %}
-    {% for item in search.results %}
-      {% if item.featured_image %}
-        <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
-          {{ item.featured_image.src | img_url: 'medium' | img_tag: item.featured_image.alt }}
-        </a>
-      {% endif %}
-      <h5>{{ item.title | link_to: item.url }}</h5>
-      <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
-    {% else %}
-      no results
-    {% endfor %}
-  {% endif %}
+<div class="container">
 
-  {% if paginate.pages > 1 %}{{ paginate | default_pagination }}{% endif %}
+  <div class="row my-5">
+    <form action="/search" method="get" role="search">
+      <input class="form-control me-2 mb-2" type="search" placeholder="Search" name="q" value="{{ search.terms | escape }}">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="product_type" name="type" value="product">
+        <label class="form-check-label" for="product_type">Product</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="article_type" name="type" value="article">
+        <label class="form-check-label" for="article_type">Article</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="page_type" name="type" value="page">
+        <label class="form-check-label" for="page_type">Page</label>
+      </div>
+      <button class="btn btn-outline-success" type="submit">search</button>
+    </form>
+  </div>
+
+  <div class="row">
+    <h1 class="my-5 text-center h2">
+      {{ search.results_count }} search results
+    </h1>
+  </div>
+
+  <div class="row row-cols-3 g-2">
+    {% if search.performed %}
+      {% for item in search.results %}
+        {% if item.object_type == 'product' %}
+        <div class="col">
+          <div class="card shadow">
+            {% if item.featured_image %}
+              <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
+                {{ item.featured_image.src | img_url: 'medium' | img_tag: item.featured_image.alt, 'card-img-top' }}
+              </a>
+            {% endif %}
+            <div class="card-body">
+                <h5>{{ item.title | link_to: item.url }}</h5>
+                <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
+              </div>
+            </div>
+          </div>
+        {% else if item.object_type == 'article' %}
+        <div class="col">
+          <div class="card shadow">
+            {% if item.image %}
+              <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
+                {{ item.image.src | img_url: 'medium' | img_tag: item.image.alt, 'card-img-top' }}
+              </a>
+            {% endif %}
+            <div class="card-body">
+                <h5>{{ item.title | link_to: item.url }}</h5>
+                <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
+              </div>
+            </div>
+          </div>
+          {% else if item.object_type == 'page' %}
+          <div class="col">
+            <div class="card shadow">
+              {% if item.image %}
+                <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
+                  {{ item.image.src | img_url: 'medium' | img_tag: item.image.alt, 'card-img-top' }}
+                </a>
+              {% endif %}
+              <div class="card-body">
+                  <h5>{{ item.title | link_to: item.url }}</h5>
+                  <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
+                </div>
+              </div>
+            </div>
+        {% endif %}
+        {% else %}
+        <h2 class="my-5">No results!</h2>
+      {% endfor %}
+    {% endif %}
+  </div>
+
+
+  <div class="row">
+    {% render 'pagination', paginate: paginate %}
+  </div>
+
+</div>
+
 {% endpaginate %}
