[TASK] Add fr locale and prep the Shopping Cart heading for updates

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,7 +1,7 @@
 {% if cart.item_count > 0 %}
 <div class="container">
   <div class="my-5">
-    <h1 class="text-center mb-3">Items in your basket</h1>
+    <h1 class="text-center mb-3 h2">Shopping Cart</h1>
     <form action="/cart" method="POST" class="row" novalidate>
       <div class="col-12 col-md-8">
         <div class="card shadow">
