--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,7 +1,8 @@
 {% if cart.item_count > 0 %}
 <div class="container">
   <div class="my-5">
-    <h1 class="text-center mb-3 h2">Shopping Cart</h1>
+    <!-- <h1 class="text-center mb-3 h2">Shopping Cart</h1> -->
+    <h1 class="text-center mb-3 h2">{{ 'general.cart.title' | t }}</h1>
     <form action="/cart" method="POST" class="row" novalidate>
       <div class="col-12 col-md-8">
         <div class="card shadow">
@@ -65,7 +66,7 @@
 {% else %}
   <div class="container">
     <div class="row">
-      <h2 class="text-center">Cart</h2>
+      <h2 class="text-center">{{ 'general.cart.title' | t }}</h2>
       <p>Cart is empty</p>
     </div>
   </div>
