[TASk] Add login and register menus

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -30,6 +30,40 @@
           <a class="nav-link" href="/cart">cart</a>
         </li>
       </ul>
+      <ul class="navbar-nav">
+        <!-- settings > checkout > Accounts are required -->
+        <!-- 14 Routes Attributes:
+          routes.root_url
+          routes.account_url
+          routes.account_login_url
+          routes.account_register_url
+          routes.account_addresses_url
+          routes.collections_url
+          routes.all_products_collection_url
+          routes.search_url
+          routes.cart_url
+          routes.cart_all_url
+          routes.cart_clear_url
+          routes.product_recommendations_url
+        -->
+        {% if shop.customer_accounts_enabled %}
+          {% if customer %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ routes.account_url }}">{{ 'general.Layout.account_text' | t }}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"  href="{{ routes.account_logout_url }}">{{ 'general.Layout.logout_text' | t }}</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link"  href="{{ routes.account_login_url }}">{{ 'general.Layout.login_text' | t }}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link"  href="{{ routes.account_register_url }}">{{ 'general.Layout.register_text' | t }}</a>
+            </li>
+          {% endif %}
+        {% endif %}
+      </ul>
       <form class="d-flex" action="/search" method="GET" role="search" aria-label="Search">
         <input class="form-control me-2" type="search" placeholder="Search" name="q" value="{{ search.terms | escape }}">
         <button class="btn btn-outline-success" type="submit">Search</button>
@@ -38,12 +72,4 @@
   </div>
 </nav>
 
-{% if shop.customer_accounts_enabled %}
-  {% if customer %}
-    <a href="/account">account</a>
-    {{ 'log out'  | customer_logout_link }}
-  {% else %}
-    {{ 'log in ' | customer_login_link }}
-    {{ 'register' | customer_register_link }}
-  {% endif %}
-{% endif %}
+
