--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -17,23 +17,22 @@
 
         {% endform %}
 
+        <a href="#recover" id="forgotPassword" class="text-center">
+            Forgot your password?
+        </a>
     </div>
-</div>
 
-<div class="container py-5 my-5">
-    <div class="login-form">
-        <h2>Forgot Password</h2>
+    <div id="forgot_password_form" class="forgot-password-form d-none mt-5">
         {% form 'recover_customer_password' %}
+            {% include 'form-error', form: form %}
+            <div class="col-12 mb-2">
+                <label for="resetPassword" class="form-label">Email Address</label>
+                <input type="email" name="email" id="resetPassword" class="form-control">
+            </div>
 
-        {{ form.errors | default_errors }}
-
-        <label for="customer_email">Email Address</label>
-        <input type="email" name="email" class="form-control" />
-
-        <input type="submit" value="Submit" class="form-btn btn-primary btn-lg w-100 rounded-0" />
-
+            <input type="submit" value="Reset Password" class="btn btn-primary btn-lg w-100 rounded-0">
         {% endform %}
-
     </div>
+
 </div>
 
