--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,4 +1,4 @@
-<!-- /templates/customers/reset_password.liquid -->
+<!-- /templates/customers/reset_password.liquid 
 
 {% form 'reset_customer_password' %}
 
@@ -18,3 +18,27 @@
 <input type="submit" value="Reset Password" />
 
 {% endform %}
+-->
+
+<div class="container my-5">
+  <h1 class="lead">Reset Password</h1>
+  <div class="row">
+    {% form 'reset_customer_password' %}
+      {% include 'form-error', form: form %}
+
+      <div class="col-12">
+        <label for="reset_password1" class="form-label">Password</label>
+        <input class="form-control" type="password" name="customer[password]" id="reset_password1" size="20">
+      </div>
+      <div class="col-12">
+        <label for="reset_password2" class="form-label">Password Confirmation</label>
+        <input class="form-control" type="password" name="customer[password_confirmation]" id="reset_password2" size="20">
+      </div>
+
+      <div class="col-12">
+        <button type="submit" class="btn btn-primary rounded-0">Reset Password</button>
+      </div>
+
+    {% endform %}
+  </div>
+</div>
