--- a/assets/custom.css
+++ b/assets/custom.css
@@ -21,3 +21,50 @@ html, body {}
   max-width: 300px;
   margin: auto;
 }
+
+.dropup {
+  position: relative;
+  display: inline-block;
+}
+
+.localeBtn {
+  background-color: #3298DB;
+  color: #fff;
+  padding: 6px;
+  font-size: 20px;
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  border-radius: 50%;
+  max-width: 70px;
+  max-height: 70px;
+  box-shadow: -1px 0px 20px 0px #00000055;
+}
+
+.localeBtn img {
+  width: 50px;
+  height: 50px;
+}
+
+.dropup-content {
+  display: none;
+  position: fixed;
+  bottom: 80px;
+  right: 25px;
+  min-width: 210px;
+  z-index: 1;
+  background-color: #f1f1f1;
+  box-shadow: -1px 0px 20px 0px #00000055;
+}
+
+.dropup:hover .dropup-content {
+  display: block;
+}
+
+.dropup-content a {
+  color: #000;
+  font-size: 17px;
+  padding: 15px 10px;
+  display: block;
+  text-align: center;
+}
