--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -12,7 +12,7 @@
   {{ 'custom.css' | asset_url | stylesheet_tag }}
 </head>
 <body>
-
+  {% section 'translation' %}
   {% section 'header' %}
 
   <main role="main">
