--- a/assets/custom.css
+++ b/assets/custom.css
@@ -14,6 +14,9 @@ html, body {}
   bottom: 0;
   width: 100%;
   z-index: -1;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 
 .login-form, .forgot-password-form {
@@ -52,7 +55,6 @@ html, body {}
   bottom: 80px;
   right: 25px;
   min-width: 210px;
-  z-index: 1;
   background-color: #f1f1f1;
   box-shadow: -1px 0px 20px 0px #00000055;
 }
@@ -67,4 +69,9 @@ html, body {}
   padding: 15px 10px;
   display: block;
   text-align: center;
+}
+
+#shopify-section-translation {
+  position: fixed;
+  z-index: 1;
 }
