--- a/sections/footer-section.liquid
+++ b/sections/footer-section.liquid
@@ -1,6 +1,6 @@
 <footer class="footer-section bg-light py-5 mt-5">
-    <div class="container">
-        <div class="row row-cols-{{ section.settings.col_num }}">
+    <div class="container p-4">
+        <div class="row row-cols-1 row-cols-md-{{ section.settings.col_num }}">
             {% for block in section.blocks %}
                 {% assign item = block.settings %}
                 {% if block.type == "link_list" %}
