[TASK] Add variants dropdown select options to product modals to use in cart api calls

--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -65,7 +65,9 @@
       </div>
       <div class="modal-footer">
         <form action="#" id="addToCartForm" class="row">
-          <input type="hidden" name="id" id="modalItemID" value="">
+          <input type="hidden" name="id" id="" value="">
+          <select name="id" id="modalItemID" class="form-select col-auto">
+          </select>
           <input type="number" name="quantity" value="1" id="modalItemQuantity" min="1" class="col-auto">
           <button type="submit" class="btn btn-success col-auto">
             Add to cart
