--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -27,7 +27,9 @@
           {% endif %}
         {% endfor %}
         <li class="nav-item">
-          <a class="nav-link" href="/cart">cart</a>
+          <a class="nav-link" href="/cart">
+            Cart <span id="numberOfCartItems" class="badge bg-danger rounded-pill">0</span>
+          </a>
         </li>
       </ul>
       <ul class="navbar-nav">
