--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -44,6 +44,45 @@
   </div>
 </div>
 
+<div class="container">
+  <section id="product_recommentation" class="row content-justify-center my-5">
+    <div class="text-center">
+      <h2>You may also like this</h2>
+      <div id="product_recommendation_body" class="row">
+
+      </div>
+    </div>
+  </section>
+</div>
+
+<script>
+  let productRecommendationBody = document.getElementById('product_recommendation_body');
+  fetch('/recommendations/products.json?product_id={{product.id}}')
+  .then(resp => resp.json())
+  .then(({ products }) => {
+    console.log(products);
+    if(products.length > 0) {
+      products.forEach(function(product, index) {
+        let card;
+
+        card = '<div class="col-3 g-2">';
+        card += '<div class="card" style="width: 18rem;">';
+
+        if(product.images.length > 0) {
+          card += '<img class="card-img-top" src="' + product.images[0] + '">'
+        };
+
+        card += '<div class="card-body">';
+        card += '<h3 class="h4"><a href="' + product.url + '">' + product.title + '</a></h3>';
+        card += '</div></div>';
+
+        productRecommendationBody.innerHTML += card;
+      })
+    }
+  });
+
+</script>
+
 {% schema %}
 {
     "name": "Product pages",
