[TASK] Add offcanvas sidebar with predictive search API

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -66,12 +66,24 @@
           {% endif %}
         {% endif %}
       </ul>
-      <form class="d-flex" action="/search" method="GET" role="search" aria-label="Search">
+      <!-- <form class="d-flex" action="/search" method="GET" role="search" aria-label="Search">
         <input class="form-control me-2" type="search" placeholder="Search" name="q" value="{{ search.terms | escape }}">
         <button class="btn btn-outline-success" type="submit">Search</button>
+      </form> -->
+      <form class="d-flex" action="/search" method="GET" role="search" aria-label="Search">
+        <input class="form-control me-2" type="text" name="q" value="{{ search.terms | escape }}" id="searchInputField">
       </form>
     </div>
   </div>
 </nav>
 
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasSearchResult" aria-labelledby="offcanvasLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasLabel">Product Search Result</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body" id="search_results_body">
+
+  </div>
+</div>
 
