[TASK] Replace the deprecated include tag with the render tag

--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -49,7 +49,7 @@
           <div class="my-5">
             {% form 'new_comment', article %}
 
-              {% include 'form-error', form: form %}
+              {% render 'form-error', form: form %}
 
               <div class="my-5 p-2 bg-light">
 
