--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -5,7 +5,7 @@
         <h2>Login</h2>
         {% form 'customer_login' %}
 
-        {% include 'form-error', form: form %}
+        {% render 'form-error', form: form %}
 
         <label for="customer_email">Email Address</label>
         <input type="email" name="customer[email]" class="form-control rounded-0 my-2" />
@@ -24,7 +24,7 @@
 
     <div id="forgot_password_form" class="forgot-password-form d-none mt-5">
         {% form 'recover_customer_password' %}
-            {% include 'form-error', form: form %}
+            {% render 'form-error', form: form %}
             <div class="col-12 mb-2">
                 <label for="resetPassword" class="form-label">Email Address</label>
                 <input type="email" name="email" id="resetPassword" class="form-control">
