--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -3,7 +3,7 @@
 <div class="container py-5 my-5">
     <div class="login-form">
         {% form 'create_customer' %}
-            {% include 'form-error', form: form %}
+            {% render 'form-error', form: form %}
             <h1 class="h3">Customer Register</h1>
             <label for="first_name">First Name</label>
             <input type="text" value="" name="customer[first_name]" class="form-control rounded-0 my-2" />
