--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -24,7 +24,7 @@
   <h1 class="lead">Reset Password</h1>
   <div class="row">
     {% form 'reset_customer_password' %}
-      {% include 'form-error', form: form %}
+      {% render 'form-error', form: form %}
 
       <div class="col-12">
         <label for="reset_password1" class="form-label">Password</label>
