--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -6,6 +6,8 @@
 {% capture author %}<strong>{{ article.author }}</strong>{% endcapture %}
 {% capture date %}<time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: format: 'abbreviated_date' }}</time>{% endcapture %}
 
+<article itemscope itemtype="https://schema.org/BlogPosting">
+
 <div class="position-relative text-center bg-light p-3 p-md-5">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <h1 class="display-4">{{ article.title }}</h1>
@@ -86,3 +88,5 @@
     </div>
   </div>
 </div>
+
+</article>
