--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -8,16 +8,17 @@
 
 <article itemscope itemtype="https://schema.org/BlogPosting">
 
-<div class="position-relative text-center bg-light p-3 p-md-5">
-  <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4">{{ article.title }}</h1>
-    <p class="lead">By {{ author }} published on {{ date }}</p>
-  </div>
-</div>
-
 <div class="container my-5">
   <div class="row">
     <div class="col-12 col-md-8">
+
+      <div class="article-title">
+        <h1 class="display-4">{{ article.title }}</h1>
+      </div>
+      <div class="article-meta">
+        <p class="lead">By {{ author }} published on {{ date }}</p>
+      </div>
+
       <div>{{ article.content }}</div>
       <div class="comment-section">
         {% if blog.comments_enabled? %}
