--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -12,6 +12,10 @@
   <div class="row">
     <div class="col-12 col-md-8">
 
+      {% if article.image != blank %}
+        <img src="{{article.image | img_url: 'master' }}" class="img-fluid rounded w-100">
+      {% endif %}
+
       <div class="article-title">
         <h1 class="display-4">{{ article.title }}</h1>
       </div>
