--- a/templates/article.liquid
+++ b/templates/article.liquid
@@ -13,17 +13,17 @@
     <div class="col-12 col-md-8">
 
       {% if article.image != blank %}
-        <img src="{{article.image | img_url: 'master' }}" class="img-fluid rounded w-100">
+        <img src="{{article.image | img_url: 'master' }}" class="img-fluid rounded w-100 my-2">
       {% endif %}
 
-      <div class="article-title">
+      <div class="article-title my-2">
         <h1 class="display-4">{{ article.title }}</h1>
       </div>
-      <div class="article-meta">
+      <div class="article-meta my-2">
         <p class="lead">By {{ author }} published on {{ date }}</p>
       </div>
 
-      <div>{{ article.content }}</div>
+      <div class="my-2">{{ article.content }}</div>
       <div class="comment-section">
         {% if blog.comments_enabled? %}
           <h4>
