[TASK] make tempalte-article even more modular, now we can set the featured image (sort of)

--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -95,3 +95,17 @@
 </div>
 
 </article>
+
+{% schema %}
+{
+    "name": "Article Section",
+    "tag": "section",
+    "blocks": [
+        {
+            "type": "featured_image",
+            "name": "Featured Image",
+            "limit": 1
+        }
+    ]
+}
+{% endschema %}
