[TASK] Make template-article even more modular, with title, article_meta, and content

--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -105,6 +105,21 @@
             "type": "featured_image",
             "name": "Featured Image",
             "limit": 1
+        },
+        {
+            "type": "title",
+            "name": "Article Title",
+            "limit": 1
+        },
+        {
+            "type": "article_meta",
+            "name": "Article Meta",
+            "limit": 1
+        },
+        {
+            "type": "content",
+            "name": "Article Content",
+            "limit": 1
         }
     ]
 }
