[TASK] Make the sidebar static again by removing (commenting out) the entry from article.json and adding the section in theme-blog-with-sidebar.liquid

--- a/layout/theme-blog-with-sidebar.liquid
+++ b/layout/theme-blog-with-sidebar.liquid
@@ -19,6 +19,7 @@
   <main class="container my-5" role="main">
     <div class="row">
         {{ content_for_layout }}
+        {% section 'sidebar' %}
     </div>
   </main>
   {% section 'footer-section' %}
