To make the blog modular, we add blocks in schema as follows.
1. Copy the schema from template-article.liquid so that we have a reference. (in /sections)
2. Paste it at the bottom of template-blog.liquid (still in /sections)
3. In schema, update the "name" to "Blog Section".
4. In "blocks", we'll add three block for:
  * title
  * blog grid
  * pagination
5. But to do that, we first need to move the pagination to its own separate div (underneath the blog grid).
6. Make sure to also move 'paginate' opening liquid tab outside the row div that wraps the for article in blog.article
7. Now we'll wrap the "render 'pagination'" liquid tag in a div.
8. We'll change "blocks" three sections in /sections/template-blog.liquid.
9. Now we'll use the newly added "blocks" (blog_title, blog_grid, blog_pagination) in blog.json file and add the "blocks" object to the JSON file.
10. Now our theme editor customizer page has the "Add block" option and on click shows the dropdown: Blog Title, Blog Grid, Blog Pagination - but the click on each of the options in the dropdown doesn't do anything. That's the update for the next commit.

That's it for this commit.

--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -5,8 +5,9 @@
     </div>
   </div>
 
+{% paginate blog.articles by 5 %}
+
   <div class="container my-5 p-2">
-    {% paginate blog.articles by 5 %}
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 py-5">
         {% for article in blog.articles %}
           <div class="col">
@@ -32,7 +33,34 @@
         {% endfor %}
       </div>
 
-      {% render 'pagination', paginate: paginate %}
+    </div>
 
-    {% endpaginate %}
-  </div>
+    <div class="container my-2">
+        {% render 'pagination', paginate: paginate %}
+    </div>
+
+{% endpaginate %}
+
+{% schema %}
+{
+    "name": "Blog Section",
+    "tag": "section",
+    "blocks": [
+        {
+            "type": "blog_title",
+            "name": "Blog Title",
+            "limit": 1
+        },
+        {
+            "type": "blog_grid",
+            "name": "Blog Grid",
+            "limit": 1
+        },
+        {
+            "type": "blog_pagination",
+            "name": "Blog Pagination",
+            "limit": 1
+        }
+    ]
+}
+{% endschema %}
